--- a/SUTA/package.json
+++ b/SUTA/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.1",
     "react-native": "0.39.2",
+    "react-native-elements": "^0.9.6",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
