--- a/SUTA/package.json
+++ b/SUTA/package.json
@@ -10,6 +10,8 @@
     "react": "15.4.1",
     "react-native": "0.39.2",
     "react-native-elements": "^0.9.6",
+    "react-native-hr": "^1.1.3",
+    "react-native-md-textinput": "^2.0.4",
     "react-native-scrollable-tab-view": "^0.7.2",
     "react-native-vector-icons": "^4.0.0"
   },
