--- a/SUTA/package.json
+++ b/SUTA/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.1",
     "react-native": "0.39.2",
+    "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.9.6",
     "react-native-hr": "^1.1.3",
     "react-native-md-textinput": "^2.0.4",
