--- a/SUTA/package.json
+++ b/SUTA/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "15.4.1",
-    "react-native": "0.39.2",
+    "react-native": "^0.42.3",
     "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.9.6",
     "react-native-hr": "^1.1.3",
