--- a/SUTA/package.json
+++ b/SUTA/package.json
@@ -13,6 +13,7 @@
     "react-native-elements": "^0.9.7",
     "react-native-hr": "^1.1.3",
     "react-native-md-textinput": "^2.0.4",
+    "react-native-popup-menu": "^0.7.3",
     "react-native-scrollable-tab-view": "^0.7.3",
     "react-native-vector-icons": "^4.0.0"
   },
