--- a/SUTA/package.json
+++ b/SUTA/package.json
@@ -12,6 +12,7 @@
     "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.9.7",
     "react-native-hr": "^1.1.3",
+    "react-native-loading-spinner-overlay": "^0.4.2",
     "react-native-md-textinput": "^2.0.4",
     "react-native-popup-menu": "^0.7.3",
     "react-native-scrollable-tab-view": "^0.7.3",
