--- a/SUTA/android/app/build.gradle
+++ b/SUTA/android/app/build.gradle
@@ -131,6 +131,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-vector-icons')
     compile project(path: ':react-native-fbsdk')
+    compile project(':react-native-image-picker')
 }
 
 // Run this once to be able to run the application with BUCK
