--- a/SUTA/package.json
+++ b/SUTA/package.json
@@ -14,6 +14,7 @@
     "react-native-elements": "^0.9.7",
     "react-native-fbsdk": "^0.5.0",
     "react-native-hr": "^1.1.3",
+    "react-native-image-picker": "^0.26.3",
     "react-native-loading-spinner-overlay": "^0.4.2",
     "react-native-md-textinput": "^2.0.4",
     "react-native-popup-menu": "^0.7.3",
