--- a/SUTA/android/app/build.gradle
+++ b/SUTA/android/app/build.gradle
@@ -143,6 +143,7 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(path: ':react-native-fbsdk')
     compile project(':react-native-image-picker')
+    compile project(':react-native-share')
 }
 
 // Run this once to be able to run the application with BUCK
