--- a/SUTA/package.json
+++ b/SUTA/package.json
@@ -19,6 +19,7 @@
     "react-native-md-textinput": "^2.0.4",
     "react-native-popup-menu": "^0.7.3",
     "react-native-scrollable-tab-view": "^0.7.3",
+    "react-native-share": "^1.0.20",
     "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
