fix folder,fix comment, fix noti comment

--- a/SUTA/android/settings.gradle
+++ b/SUTA/android/settings.gradle
@@ -1,8 +1,5 @@
 rootProject.name = 'SUTA'
-include ':react-native-fbsdk'
-project(':react-native-fbsdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk/android')
-include ':react-native-fbsdk'
-project(':react-native-fbsdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk/android')
+include ':libraries:Android-RateThisApp:library'
 include ':react-native-fbsdk'
 project(':react-native-fbsdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk/android')
 include ':react-native-image-picker'
